updated function calls to work with latest version of poppy

--- a/notebooks/Getting Started with GPI PSFs.ipynb
+++ b/notebooks/Getting Started with GPI PSFs.ipynb
@@ -17,9 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -55,9 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "gpi = gpipsfs.GPI()\n",
@@ -74,9 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -111,9 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -141,9 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -157,8 +147,8 @@
     }
    ],
    "source": [
-    "psf_h = gpi.calcPSF(monochromatic=1.6e-6)   #wavelengths are always given in **meters**\n",
-    "gpipsfs.display_PSF(psf_h, vmax=1e-4, vmin=1e-10)  # note these are somewhat arbitrary units, NOT contrast!"
+    "psf_h = gpi.calc_psf(monochromatic=1.6e-6)   #wavelengths are always given in **meters**\n",
+    "gpipsfs.display_psf(psf_h, vmax=1e-4, vmin=1e-10)  # note these are somewhat arbitrary units, NOT contrast!"
    ]
   },
   {
@@ -171,9 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -188,7 +176,7 @@
    ],
    "source": [
     "plt.figure(figsize=(10,7))\n",
-    "psf_h = gpi.calcPSF(monochromatic=1.6e-6, display=True)"
+    "psf_h = gpi.calc_psf(monochromatic=1.6e-6, display=True)"
    ]
   },
   {
@@ -217,9 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -243,9 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -287,9 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -320,9 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -359,9 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -401,9 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -448,9 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -473,9 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -496,9 +468,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
