--- a/notebooks/Example Coronagraph Misalignments.ipynb
+++ b/notebooks/Example Coronagraph Misalignments.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -73,9 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -91,7 +87,7 @@
    "source": [
     "gpi=gpipsfs.GPI()\n",
     "gpi.obsmode = 'H_coron'\n",
-    "osys = gpi._getOpticalSystem()\n",
+    "osys = gpi._get_optical_system()\n",
     "\n",
     "plt.figure(figsize=(8,6))\n",
     "psf_nominal = osys.calc_psf(wavelength=1.6e-6, display_intermediates=True)\n",
@@ -104,9 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -122,7 +116,7 @@
    "source": [
     "gpi=gpipsfs.GPI()\n",
     "gpi.obsmode = 'H_coron'\n",
-    "osys = gpi._getOpticalSystem()\n",
+    "osys = gpi._get_optical_system()\n",
     "osys.planes[1].shift_x = D/20\n",
     "\n",
     "\n",
@@ -140,9 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -158,7 +150,7 @@
    "source": [
     "gpi=gpipsfs.GPI()\n",
     "gpi.obsmode = 'H_coron'\n",
-    "osys = gpi._getOpticalSystem()\n",
+    "osys = gpi._get_optical_system()\n",
     "osys.planes[1].shift_x = D/10/np.sqrt(2)\n",
     "osys.planes[1].shift_y = D/10/np.sqrt(2)\n",
     "\n",
@@ -176,9 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -194,7 +184,7 @@
    "source": [
     "gpi=gpipsfs.GPI()\n",
     "gpi.obsmode = 'H_coron'\n",
-    "osys = gpi._getOpticalSystem()\n",
+    "osys = gpi._get_optical_system()\n",
     "osys.planes[3].shift_x = D/10/np.sqrt(2)\n",
     "osys.planes[3].shift_y = D/10/np.sqrt(2)\n",
     "\n",
@@ -212,9 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -230,7 +218,7 @@
    "source": [
     "gpi=gpipsfs.GPI()\n",
     "gpi.obsmode = 'H_coron'\n",
-    "osys = gpi._getOpticalSystem()\n",
+    "osys = gpi._get_optical_system()\n",
     "osys.planes[3].shift_x =  D/10\n",
     "\n",
     "plt.figure(figsize=(8,6))\n",
@@ -247,9 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -265,7 +251,7 @@
    "source": [
     "gpi=gpipsfs.GPI()\n",
     "gpi.obsmode = 'H_coron'\n",
-    "osys = gpi._getOpticalSystem()\n",
+    "osys = gpi._get_optical_system()\n",
     "#osys.planes[3].shift_x = 0.5\n",
     "npix=5\n",
     "osys.source_offset_r = 0.014*npix\n",
@@ -284,9 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -302,7 +286,7 @@
    "source": [
     "gpi=gpipsfs.GPI()\n",
     "gpi.obsmode = 'H_coron'\n",
-    "osys = gpi._getOpticalSystem()\n",
+    "osys = gpi._get_optical_system()\n",
     "#osys.planes[3].shift_x = 0.5\n",
     "npix=5\n",
     "osys.source_offset_r = 0.014*npix\n",
@@ -345,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
