--- a/notebooks/GPI Tutorial on Coronagraphs.ipynb
+++ b/notebooks/GPI Tutorial on Coronagraphs.ipynb
@@ -28,9 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -94,9 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -125,7 +121,7 @@
    "source": [
     "gpi.obsmode ='H_direct'\n",
     "wavelen = 1.6e-6  # wavelength is always given in meters\n",
-    "psf_direct= gpi.calcPSF(wavelength=wavelen, display=True, verbose=True)  "
+    "psf_direct= gpi.calc_psf(wavelength=wavelen, display=True, verbose=True)  "
    ]
   },
   {
@@ -145,9 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -175,7 +169,7 @@
    ],
    "source": [
     "gpi.occulter=\"H\"\n",
-    "psf= gpi.calcPSF(wavelength=wavelen, display=True, verbose=True)"
+    "psf= gpi.calc_psf(wavelength=wavelen, display=True, verbose=True)"
    ]
   },
   {
@@ -197,9 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -227,7 +219,7 @@
    ],
    "source": [
     "gpi.lyotmask=\"080m12_04\"  # this happens to be the part number for the mask used in H. \n",
-    "psf= gpi.calcPSF(wavelength=wavelen, display=True, verbose=True)"
+    "psf= gpi.calc_psf(wavelength=wavelen, display=True, verbose=True)"
    ]
   },
   {
@@ -244,9 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -274,7 +264,7 @@
    ],
    "source": [
     "gpi.lyotmask=\"080m12_10\" \n",
-    "psf= gpi.calcPSF(monochromatic=wavelen, display=True, verbose=True)"
+    "psf= gpi.calc_psf(monochromatic=wavelen, display=True, verbose=True)"
    ]
   },
   {
@@ -294,9 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -326,7 +314,7 @@
     "gpi.lyotmask='Open'  \n",
     "gpi.occulter='SCIENCE' \n",
     "gpi.apodizer=\"H\" \n",
-    "psf= gpi.calcPSF(wavelength=wavelen, display=True, verbose=True)"
+    "psf= gpi.calc_psf(wavelength=wavelen, display=True, verbose=True)"
    ]
   },
   {
@@ -341,9 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -371,7 +357,7 @@
    ],
    "source": [
     "gpi.occulter='H'\n",
-    "psf= gpi.calcPSF(wavelength=wavelen, display=True, verbose=True)"
+    "psf= gpi.calc_psf(wavelength=wavelen, display=True, verbose=True)"
    ]
   },
   {
@@ -384,9 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -414,7 +398,7 @@
    ],
    "source": [
     "gpi.lyotmask=\"080m12_04\"  \n",
-    "psf= gpi.calcPSF(monochromatic=wavelen, display=True, verbose=True)"
+    "psf= gpi.calc_psf(monochromatic=wavelen, display=True, verbose=True)"
    ]
   },
   {
@@ -445,9 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -475,7 +457,7 @@
    ],
    "source": [
     "gpi.satspots=True\n",
-    "psf_with_spots = gpi.calcPSF(wavelength=wavelen, display=True, verbose=True)"
+    "psf_with_spots = gpi.calc_psf(wavelength=wavelen, display=True, verbose=True)"
    ]
   },
   {
@@ -492,9 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -536,9 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -569,7 +547,7 @@
    "source": [
     "pylab.rcParams['figure.figsize'] = (12.0, 11.0)  # Even bigger plot size now; adjust as desired\n",
     "\n",
-    "psf_with_spots = gpi.calcPSF(wavelength=1e-6, display=True, verbose=True)"
+    "psf_with_spots = gpi.calc_psf(wavelength=1e-6, display=True, verbose=True)"
    ]
   },
   {
@@ -596,9 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -623,9 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -658,9 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -695,9 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -726,7 +696,7 @@
     }
    ],
    "source": [
-    "psf_badact = gpi.calcPSF(wavelength=1e-6, display=True, verbose=True)"
+    "psf_badact = gpi.calc_psf(wavelength=1e-6, display=True, verbose=True)"
    ]
   },
   {
@@ -748,9 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -780,7 +748,7 @@
    ],
    "source": [
     "gpi.lyot_tabs = True\n",
-    "psf_blocked = gpi.calcPSF(wavelength=1e-6, display=True, verbose=True)"
+    "psf_blocked = gpi.calc_psf(wavelength=1e-6, display=True, verbose=True)"
    ]
   },
   {
@@ -832,9 +800,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
